archives/2012/Kuan/bootcamphw1_complete.session.session/monitor.log
======================================
Logging time: Wed Sep 19 12:43:30 2012
======================================

Context
-------

getcomplist(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    getcomplist(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 12:43:30 2012
======================================

Context
-------

__get_dir__(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    __get_dir__(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 12:59:16 2012
======================================

Context
-------

getcomplist(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    getcomplist(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 12:59:16 2012
======================================

Context
-------

__get_dir__(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    __get_dir__(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 13:36:47 2012
======================================

Context
-------

getcomplist(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    getcomplist(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 13:36:47 2012
======================================

Context
-------

__get_dir__(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    __get_dir__(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 14:56:59 2012
======================================

Context
-------

getcomplist(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    getcomplist(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 14:56:59 2012
======================================

Context
-------

__get_dir__(''call')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    __get_dir__(''call')
                     ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 15:19:39 2012
======================================

Context
-------

getcomplist(''U937_0')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    getcomplist(''U937_0')
                       ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 15:19:39 2012
======================================

Context
-------

__get_dir__(''U937_0')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    __get_dir__(''U937_0')
                       ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 15:21:08 2012
======================================

Context
-------

getcomplist('nb4['NB4_5.')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    getcomplist('nb4['NB4_5.')
                          ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 15:21:08 2012
======================================

Context
-------

getcomplist(''NB4_5')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    getcomplist(''NB4_5')
                      ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 15:21:08 2012
======================================

Context
-------

__get_dir__(''NB4_5')

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    __get_dir__(''NB4_5')
                      ^
SyntaxError: invalid syntax


======================================
Logging time: Wed Sep 19 15:38:26 2012
======================================

Context
-------

isdefined('scipy.signal.correlate2d()
', force_import=False)

Traceback
---------

Traceback (most recent call last):
  File "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/spyder-2.1.11-py2.7.egg/spyderlib/widgets/externalshell/monitor.py", line 556, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    isdefined('scipy.signal.correlate2d()
                                        ^
SyntaxError: EOL while scanning string literal


